--- a/package.json
+++ b/package.json
@@ -12,9 +12,18 @@
     "@apollo/server": "^4.3.0",
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.17",
+    "@types/ws": "^8.5.3",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "graphql": "^16.6.0",
+    "graphql-subscriptions": "^2.0.0",
+    "graphql-ws": "^5.11.2",
     "nodemon": "^2.0.20",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "websocket": "^1.0.34",
+    "ws": "^8.11.0"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.13"
   }
 }
